--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # files you need locally and not to be shared publicly
 secrets.py
 names.py
+.idea
+espn-api/*
 
 ### DEFAULT GITHUB PYTHON .giotignore BELOW HERE ###
 
